--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="a/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@1,500&family=Josefin+Sans&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
             <p>Made by Matvii Tupikov, Daniil Hryhorenko</p>
         </div>
         <div class="button">
-            <a href="../b/second.html">
+            <a href="b/second.html">
         <button id="start">Start</button>
             </a>
         </div>
