--- a/g/last.html
+++ b/g/last.html
@@ -17,7 +17,7 @@
     </div>
     <p>Overall, learning math in school is indispensable because it is the foundation upon which a multitude of other skills and knowledge areas are built. It empowers individuals to make informed decisions, pursue rewarding careers, and navigate the complexities of our modern world. Math is not just an academic subject; it is a life skill that enriches and empowers us in countless ways.</p>
     <div class="button_2">
-      <a href="../a/index.html">
+      <a href="../index.html">
         <button id="start_2">Again</button>
       </a>
     </div>
@@ -25,4 +25,4 @@
 
 </div>
 </body>
-</html
+</html>
